Added about option

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -3,5 +3,13 @@
 <PreferenceScreen
 	xmlns:android="http://schemas.android.com/apk/res/android"
 >
-
+	<PreferenceCategory
+		android:title="About"
+	>
+		<ListPreference
+			android:key="about"
+			android:title="About"
+			android:summary="About the app"
+		/>
+	</PreferenceCategory>
 </PreferenceScreen>
