--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -4,6 +4,16 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 >
 	<PreferenceCategory
+		android:title="General"
+	>
+		<Preference
+			android:key="last_checked"
+			android:title="Last checked"
+			android:summary="Tap to check now"
+		/>
+	</PreferenceCategory>
+
+	<PreferenceCategory
 		android:title="About"
 	>
 		<Preference
