--- a/app/src/main/res/layout/download_view.xml
+++ b/app/src/main/res/layout/download_view.xml
@@ -23,11 +23,12 @@
 			android:drawablePadding="12dp"
 		/>
 
-		<View
+		<ProgressBar
 			android:layout_width="match_parent"
-			android:layout_height="1dp"
-			android:background="#ffdedede"
+			android:layout_height="4dp"
+			android:id="@+id/progress"
 			android:layout_marginTop="12dp"
+			style="@style/Widget.AppCompat.ProgressBar.Horizontal"
 		/>
 
 		<TextView
@@ -50,13 +51,28 @@
 			android:layout_marginTop="12dp"
 		/>
 
-		<Button
+		<LinearLayout
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:id="@+id/download"
-			android:text="Download &amp; install"
+			android:orientation="horizontal"
 			android:layout_gravity="right"
 			android:layout_marginTop="12dp"
-		/>
+		>
+			<Button
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:id="@+id/cancel"
+				android:text="Remind me later"
+				style="@style/Widget.AppCompat.Button.Borderless.Colored"
+			/>
+
+			<Button
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:id="@+id/download"
+				android:text="Download &amp; install"
+				style="@style/Widget.AppCompat.Button.Borderless.Colored"
+			/>
+		</LinearLayout>
 	</LinearLayout>
 </ScrollView>
